# breach-protocol

./: .gitignore  CHANGELOG.md  PACKAGING.md  PORTALS.md  PRESS_KIT.md  README.md  SIGNING.md  ads.txt  build.sh  capacitor.config.json  contact.html  game.js  index.html  make_header.py  make_logo.py  make_og.py  make_thumbs.py  package-lock.json  package.json  privacy.html  style.css  vercel.json
.github/workflows/: android-release.yml  desktop-release.yml
android/app/: build.gradle
android/app/src/main/java/com/samuelbanapour/breachprotocol/: MainActivity.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
scripts/: make-dist.mjs  save_server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
